// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutYouConnected component renders Gender and BirthDate when logged in 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    birthDate="1980-02-10T05:00:00.000Z"
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    gender="Male"
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              This one's easy.
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Help us understand who you are so we can connect you with the best ministries and events.
          </Text>
        </View>
        <Text
          padded={true}
          style={
            Object {
              "color": "gray",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "lineHeight": 18,
              "marginTop": 16,
              "opacity": 0.7,
              "paddingBottom": 9,
            }
          }
        >
          Gender
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "marginBottom": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(165, 165, 165, 0.5)",
                "borderBottomWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 8,
              }
            }
            underline={false}
          >
            <View
              isSelected={true}
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "#00676D",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00676D",
                    "borderRadius": 10,
                    "height": 12,
                    "width": 12,
                  }
                }
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "marginLeft": 8,
                }
              }
            >
              Male
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(165, 165, 165, 0.5)",
                "borderBottomWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 8,
              }
            }
            underline={false}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "#A5A5A5",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "marginLeft": 8,
                }
              }
            >
              Female
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(165, 165, 165, 0.5)",
                "borderBottomWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 8,
              }
            }
            underline={false}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "#A5A5A5",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "marginLeft": 8,
                }
              }
            >
              Prefer not to reply
            </Text>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "gray",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "lineHeight": 18,
              "opacity": 0.7,
            }
          }
        >
          Birthday
        </Text>
        <View
          style={
            Object {
              "marginVertical": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              bordered={false}
              disabled={false}
              pill={false}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#17B582",
                  "borderColor": "#17B582",
                  "borderRadius": 16,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 32,
                  "justifyContent": "center",
                  "marginTop": 5,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingHorizontal": 12,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignItems": "center",
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 12,
                    "justifyContent": "center",
                    "lineHeight": 18,
                    "textAlign": "center",
                  }
                }
              >
                02/10/1980
              </Text>
            </View>
          </View>
          <Modal
            animationType="none"
            hardwareAccelerated={false}
            isVisible={false}
            onHide={[Function]}
            transparent={true}
            visible={false}
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "black",
                  "bottom": 0,
                  "height": 1334,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 750,
                }
              }
            />
          </Modal>
          <View
            onLayout={[Function]}
            pointerEvents="none"
            style={
              Object {
                "justifyContent": "center",
                "opacity": 0.8,
                "position": "absolute",
                "top": 0,
                "transform": Array [
                  Object {
                    "scale": 0.8,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <Text
              numberOfLines={0}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgba(39, 39, 46, 0.6)",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "paddingVertical": 4,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Next
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#FFFFFF"
            height={20}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={20}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            tintColor="#FFFFFF"
            vbHeight={256}
            vbWidth={256}
            width={20}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGLine
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                x1={40}
                x2={216}
                y={0}
                y1={128}
                y2={128}
              />
              <RNSVGPath
                d="M144 56 216 128 144 200"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`AboutYouConnected component renders in a default state 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              This one's easy.
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Help us understand who you are so we can connect you with the best ministries and events.
          </Text>
        </View>
        <Text
          padded={true}
          style={
            Object {
              "color": "gray",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "lineHeight": 18,
              "marginTop": 16,
              "opacity": 0.7,
              "paddingBottom": 9,
            }
          }
        >
          Gender
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "marginBottom": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(165, 165, 165, 0.5)",
                "borderBottomWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 8,
              }
            }
            underline={false}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "#A5A5A5",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "marginLeft": 8,
                }
              }
            >
              Male
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(165, 165, 165, 0.5)",
                "borderBottomWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 8,
              }
            }
            underline={false}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "#A5A5A5",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "marginLeft": 8,
                }
              }
            >
              Female
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgba(165, 165, 165, 0.5)",
                "borderBottomWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 8,
              }
            }
            underline={false}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "#A5A5A5",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "marginLeft": 8,
                }
              }
            >
              Prefer not to reply
            </Text>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "gray",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "lineHeight": 18,
              "opacity": 0.7,
            }
          }
        >
          Birthday
        </Text>
        <View
          style={
            Object {
              "marginVertical": 16,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              bordered={false}
              disabled={false}
              pill={false}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#17B582",
                  "borderColor": "#17B582",
                  "borderRadius": 16,
                  "borderWidth": 2,
                  "elevation": 2,
                  "flexDirection": "row",
                  "height": 32,
                  "justifyContent": "center",
                  "marginTop": 5,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingHorizontal": 12,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignItems": "center",
                    "color": "#FFFFFF",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 12,
                    "justifyContent": "center",
                    "lineHeight": 18,
                    "textAlign": "center",
                  }
                }
              >
                Select a date...
              </Text>
            </View>
          </View>
          <Modal
            animationType="none"
            hardwareAccelerated={false}
            isVisible={false}
            onHide={[Function]}
            transparent={true}
            visible={false}
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "black",
                  "bottom": 0,
                  "height": 1334,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 750,
                }
              }
            />
          </Modal>
          <View
            onLayout={[Function]}
            pointerEvents="none"
            style={
              Object {
                "justifyContent": "center",
                "opacity": 0.8,
                "position": "absolute",
                "top": 0,
                "transform": Array [
                  Object {
                    "scale": 0.8,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <Text
              numberOfLines={0}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgba(39, 39, 46, 0.6)",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                  "paddingVertical": 4,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.3)",
            "marginLeft": -16,
            "paddingHorizontal": 16,
            "paddingVertical": 15,
          }
        }
        trackEventName="About You Skipped"
      >
        Skip
      </Text>
    </View>
  </View>
</View>
`;

exports[`AboutYouConnected component should render a custom Component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <Text>
    Male
  </Text>
</View>
`;
